fixed home page alignment. changed color of visited links in mini nav.

--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -12,6 +12,7 @@ img
   display: block
   margin: 1em 10%
   grid-area: image
+  float: left
 
 .emphasis
   color: black
@@ -21,3 +22,6 @@ img
   p 
     color: #616161
     
+
+
+  
