--- a/src/app/resume/resume.component.sass
+++ b/src/app/resume/resume.component.sass
@@ -17,6 +17,7 @@ nav
 
   a:hover
     color: #4bacc6
+  a:visited
 
 
 /* Style the list inside the menu */
@@ -41,9 +42,9 @@ article
     color: #4bacc6
   a:hover
     color: #4bacc6
+  a:visited
+    color: #999
 
-// teal  
-//   color: #4bacc6
 
 /* Style the footer */
 footer 
